5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1838_1274.log
== TEST (2019-06-24 14:40:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input("dimensao:"))
mat = ones((n,n), dtype=int)
j = 1
k = 2

for i in range(1,n):
	while(j<n):
		mat[i,j]=i+j:
		j = j + 1
		#if(i > j):
		#mat[i,j] = 
print(mat)
-- ERROR:
File "XXXX", line 11
    mat[i,j]=i+j:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:40:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input("dimensao:"))
mat = ones((n,n), dtype=int)
j = 1
k = 2

for i in range(1,n):
	while(j<n):
		mat[i,j]=i+j
		j = j + 1
		#if(i > j):
		#mat[i,j] = 
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:41:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input("dimensao:"))
mat = ones((n,n), dtype=int)
j = 1
k = 2

for i in range(1,n):
	while(j<n):
		mat[i,j]=i+j
		j = j + 1
		if(i > j):
			mat[i,j] = k
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:42:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input("dimensao:"))
mat = ones((n,n), dtype=int)
j = 1
k = 2

for i in range(1,n):
	while(j<n):
		mat[i,j]=i+j
		j = j + 1
		if(i > j):
			mat[i,j] = k
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:43:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input("dimensao:"))
mat = ones((n,n), dtype=int)
j = 1
k = 2

for i in range(1,n):
	j=1
	while(j<n):
		mat[i,j]=i+j
		j = j + 1
		if(i > j):
			mat[i,j] = k
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:43:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input("dimensao:"))
mat = ones((n,n), dtype=int)
j = 1
k = 2

for i in range(1,n):
	j=1
	while(j<n):
		mat[i,j]=i+j
		j = j + 1
		if(i < j):
			mat[i,j] = k
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:02:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input("dimensao:"))
mat = ones((n,n), dtype=int)
j = 1
k = 2

for i in range(1,n):
	while(j<n):
		mat[i,j]=i+1
		j = j + 1
	j=k
	k = k + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:05:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input("dimensao:"))
mat = ones((n,n), dtype=int)
j = 1
k = 2

for i in range(1,n):
	while(j<n):
		mat[i,j]=i+1
		j = j + 1
	mat[i,j]=i+1
	j=k
	k = k + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:33:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input("dimensao:"))
mat = ones((n,n), dtype=int)
j = 1
k = 2

for i in range(1,n):
	while(j<n):
		mat[i,j]=i+1
		j = j + 1
	j=k
	k = k + 1

i = 1
k = 2

for j in range(1,n):
	while(i<n):
		mat[i,j] = j+1
		i = i +1
	i = k
	k = k + 1

print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 15:33:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input("dimensao:"))
mat = ones((n,n), dtype=int)
j = 1
k = 2

for i in range(1,n):
	while(j<n):
		mat[i,j]=i+1
		j = j + 1
	j=k
	k = k + 1

i = 1
k = 2

for j in range(1,n):
	while(i<n):
		mat[i,j] = j+1
		i = i +1
	i = k
	k = k + 1

print(mat)
-- EXECUTION TIME:
1.10825
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
